--- a/index.html
+++ b/index.html
@@ -4,8 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Quantity Counter</title>
+    <style>
+        body{
+           background-color: black;
+        }
+     .product-card{
+        height: 400px;
+        width: 300px;
+        border: 1px solid beige;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 10px;
+        box-shadow: 0px 5px  20px 0px beige ;
+        background-color:#09173E;
+     }
+     .product-image{
+        height: 200px;
+        display: block;
+        margin: 10px auto;
+     }
+     .buy-btn{
+        display: block;
+        margin: 10px auto;
+        font-size: 25px;
+        padding: 5px 40px;
+        border: 1px solid beige;
+        border-radius: 15px;
+        color: beige;
+        background-color:#09173E;
+        cursor: pointer;
+        margin-top: 80px;
+     }
+     .btn-quantity{
+        height: 40px;
+        cursor: pointer;
+     }
+     .btn-container{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        color: beige;
+        margin-top: 50px;
+        font-size: 30px;
+     }
+    </style>
 </head>
 <body>
-    
+    <div class="product-card">
+        <image src="/yellow-cycle-with-wicker-basket-icon-isolated.png" class="product-image"></image>
+        <div class="btn-container">
+            <img src="sub.png" class="btn-quantity" onclick="handlequantitychange('dec')"/>
+             <span id="quantity-text">1</span> 
+            <img src="add.png" class="btn-quantity" onclick="handlequantitychange('inc')"/>
+        </div>
+
+        <button class="buy-btn">
+            Buy Now
+        </button>
 </body>
 </html>
